// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`presets > miniprogramPreset 1`] = `
{
  "base": {
    "extraColors": {
      "dark": {
        "base-100": "#000000",
        "base-1000": "#f0f0f0",
        "base-1100": "#f5f5f5",
        "base-1200": "#fafafa",
        "base-1300": "#ffffff",
        "base-200": "#141414",
        "base-300": "#1f1f1f",
        "base-400": "#262626",
        "base-500": "#434343",
        "base-600": "#595959",
        "base-700": "#8c8c8c",
        "base-800": "#bfbfbf",
        "base-900": "#d9d9d9",
        "base-content": "#ffffff",
      },
      "light": {
        "base-100": "#ffffff",
        "base-1000": "#262626",
        "base-1100": "#1f1f1f",
        "base-1200": "#141414",
        "base-1300": "#000000",
        "base-200": "#fafafa",
        "base-300": "#f5f5f5",
        "base-400": "#f0f0f0",
        "base-500": "#d9d9d9",
        "base-600": "#bfbfbf",
        "base-700": "#8c8c8c",
        "base-800": "#595959",
        "base-900": "#434343",
        "base-content": "#000000",
      },
    },
    "extraVars": {
      "dark": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
      "light": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
    },
    "themes": {
      "dark": {
        "selector": ".dark",
      },
      "light": {
        "selector": "page",
      },
    },
    "types": {
      "error": {
        "dark": {
          "error": "#d32029",
          "error-active": "#e84749",
          "error-content": "#ffffff",
          "error-hover": "#a61d24",
        },
        "light": {
          "error": "#f5222d",
          "error-active": "#cf1322",
          "error-content": "#ffffff",
          "error-hover": "#ff4d4f",
        },
      },
      "neutral": {
        "dark": {
          "neutral": "#5a5a5a",
          "neutral-active": "#6a6a6a",
          "neutral-content": "#ffffff",
          "neutral-hover": "#494949",
        },
        "light": {
          "neutral": "#666666",
          "neutral-active": "#404040",
          "neutral-content": "#ffffff",
          "neutral-hover": "#737373",
        },
      },
      "primary": {
        "dark": {
          "primary": "#1668dc",
          "primary-active": "#3c89e8",
          "primary-content": "#ffffff",
          "primary-hover": "#1554ad",
        },
        "light": {
          "primary": "#1677ff",
          "primary-active": "#0958d9",
          "primary-content": "#ffffff",
          "primary-hover": "#4096ff",
        },
      },
      "success": {
        "dark": {
          "success": "#49aa19",
          "success-active": "#6abe39",
          "success-content": "#ffffff",
          "success-hover": "#3c8618",
        },
        "light": {
          "success": "#52c41a",
          "success-active": "#389e0d",
          "success-content": "#ffffff",
          "success-hover": "#73d13d",
        },
      },
      "warning": {
        "dark": {
          "warning": "#d89614",
          "warning-active": "#e8b339",
          "warning-content": "#ffffff",
          "warning-hover": "#aa7714",
        },
        "light": {
          "warning": "#faad14",
          "warning-active": "#d48806",
          "warning-content": "#ffffff",
          "warning-hover": "#ffc53d",
        },
      },
    },
  },
  "components": {
    "alert": {
      "schema": [Function],
      "selector": ".alert",
    },
    "avatar": {
      "schema": [Function],
      "selector": ".avatar",
    },
    "badge": {
      "schema": [Function],
      "selector": ".badge",
    },
    "button": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".btn",
    },
    "chat": {
      "schema": [Function],
      "selector": ".chat",
    },
    "checkbox": {
      "prefix": {
        "ignore": [
          ".wx-checkbox",
        ],
      },
      "schema": [Function],
      "selector": ".checkbox",
    },
    "collapse": {
      "schema": [Function],
      "selector": ".collapse",
    },
    "countdown": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".countdown",
      "varPrefix": {
        "ignoreProp": [
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--value",
        ],
      },
    },
    "diff": false,
    "divider": {
      "schema": [Function],
      "selector": ".divider",
    },
    "form": {
      "schema": [Function],
    },
    "indicator": {
      "schema": [Function],
      "selector": ".indicator",
    },
    "input": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".input",
    },
    "join": {
      "schema": [Function],
      "selector": ".join",
    },
    "kbd": {
      "schema": [Function],
      "selector": ".kbd",
    },
    "link": {
      "schema": [Function],
      "selector": ".link",
    },
    "loading": {
      "schema": [Function],
      "selector": ".loading",
    },
    "mask": {
      "schema": [Function],
      "selector": ".mask",
    },
    "progress": {
      "schema": [Function],
      "selector": ".progress",
    },
    "radial-progress": {
      "schema": [Function],
      "selector": ".radial-progress",
      "varPrefix": {
        "ignoreProp": [
          "--size",
          "--thickness",
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--size",
          "--thickness",
          "--value",
        ],
      },
    },
    "radio": {
      "prefix": {
        "ignore": [
          ".wx-radio",
        ],
      },
      "schema": [Function],
      "selector": ".radio",
    },
    "range": {
      "prefix": {
        "ignore": [
          ".wx-slider",
        ],
      },
      "schema": [Function],
      "selector": ".range",
    },
    "select": false,
    "skeleton": {
      "schema": [Function],
      "selector": ".skeleton",
    },
    "stack": {
      "schema": [Function],
      "selector": ".stack",
    },
    "steps": {
      "schema": [Function],
      "selector": ".step",
    },
    "tab": {
      "schema": [Function],
      "selector": ".tab",
    },
    "table": {
      "schema": [Function],
      "selector": ".table",
    },
    "textarea": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".textarea",
    },
    "toast": {
      "schema": [Function],
      "selector": ".toast",
    },
    "toggle": {
      "prefix": {
        "ignore": [
          ".wx-switch",
          ".wx-checkbox",
        ],
      },
      "schema": [Function],
      "selector": ".toggle",
    },
    "tooltip": false,
  },
  "dryRun": false,
  "global": {
    "atMedia": {
      "hover": false,
    },
    "pseudo": {},
    "selector": {
      "root": "page",
      "universal": "view",
    },
  },
  "log": true,
  "mode": "styled",
  "presets": [
    {
      "base": {
        "themes": {
          "dark": {
            "selector": ".dark",
          },
          "light": {
            "selector": "page",
          },
        },
      },
      "components": {
        "button": {
          "extra": [Function],
        },
        "checkbox": {
          "prefix": {
            "ignore": [
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "collapse": {
          "schema": [Function],
        },
        "countdown": {
          "extra": [Function],
        },
        "diff": false,
        "input": {
          "extra": [Function],
        },
        "join": {
          "schema": [Function],
        },
        "radio": {
          "prefix": {
            "ignore": [
              ".wx-radio",
            ],
          },
          "schema": [Function],
        },
        "range": {
          "prefix": {
            "ignore": [
              ".wx-slider",
            ],
          },
          "schema": [Function],
        },
        "select": false,
        "tab": {
          "schema": [Function],
        },
        "table": {
          "schema": [Function],
        },
        "textarea": {
          "extra": [Function],
        },
        "toggle": {
          "prefix": {
            "ignore": [
              ".wx-switch",
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "tooltip": false,
      },
      "global": {
        "atMedia": {
          "hover": false,
        },
        "pseudo": {},
        "selector": {
          "root": "page",
          "universal": "view",
        },
      },
    },
  ],
  "varPrefix": {
    "varPrefix": "--ice-",
  },
}
`;

exports[`presets > miniprogramPreset checkbox css 1`] = `
{
  "base": {
    ".checkbox .wx-checkbox-input": {
      "borderRadius": "0.125rem",
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "left": "50%",
      "lineHeight": "1rem",
      "position": "absolute",
      "textAlign": "center",
      "top": "50%",
      "transform": "translate(-50%, -50%) scale(1)",
      "width": "1rem",
    },
  },
  "styled": {
    ".checkbox-error .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-error) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-error) / var(--tw-border-opacity))",
    },
    ".checkbox-error .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".checkbox-neutral .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-neutral) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-neutral) / var(--tw-border-opacity))",
    },
    ".checkbox-neutral .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".checkbox-primary .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-primary) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-primary) / var(--tw-border-opacity))",
    },
    ".checkbox-primary .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".checkbox-success .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-success) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-success) / var(--tw-border-opacity))",
    },
    ".checkbox-success .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".checkbox-warning .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-warning) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-warning) / var(--tw-border-opacity))",
    },
    ".checkbox-warning .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
  },
  "utils": {
    ".checkbox-circle .wx-checkbox-input": {
      "borderRadius": "9999px",
    },
    ".checkbox-lg .wx-checkbox-input": {
      "height": "1.5rem",
      "width": "1.5rem",
    },
    ".checkbox-lg .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1.25rem",
      "height": "1.25rem",
      "lineHeight": "1.25rem",
      "width": "1.25rem",
    },
    ".checkbox-md .wx-checkbox-input": {
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".checkbox-md .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "lineHeight": "1rem",
      "width": "1rem",
    },
    ".checkbox-sm .wx-checkbox-input": {
      "height": "1rem",
      "width": "1rem",
    },
    ".checkbox-sm .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "0.75rem",
      "height": "0.75rem",
      "lineHeight": ".75rem",
      "width": "0.75rem",
    },
    ".checkbox-square .wx-checkbox-input": {
      "borderRadius": "0.125rem",
    },
    ".checkbox-xs .wx-checkbox-input": {
      "height": "0.75rem",
      "width": "0.75rem",
    },
    ".checkbox-xs .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "0.5rem",
      "height": "0.5rem",
      "lineHeight": "0.5rem",
      "width": "0.5rem",
    },
  },
}
`;

exports[`presets > miniprogramPreset checkbox css with prefix 1`] = `
{
  "base": {
    ".som-checkbox .wx-checkbox-input": {
      "borderRadius": "0.125rem",
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".som-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "left": "50%",
      "lineHeight": "1rem",
      "position": "absolute",
      "textAlign": "center",
      "top": "50%",
      "transform": "translate(-50%, -50%) scale(1)",
      "width": "1rem",
    },
  },
  "styled": {
    ".som-checkbox-error .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-error) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-error) / var(--tw-border-opacity))",
    },
    ".som-checkbox-error .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".som-checkbox-neutral .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-neutral) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-neutral) / var(--tw-border-opacity))",
    },
    ".som-checkbox-neutral .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".som-checkbox-primary .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-primary) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-primary) / var(--tw-border-opacity))",
    },
    ".som-checkbox-primary .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".som-checkbox-success .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-success) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-success) / var(--tw-border-opacity))",
    },
    ".som-checkbox-success .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".som-checkbox-warning .wx-checkbox-input.wx-checkbox-input-checked": {
      "--tw-bg-opacity": "1",
      "--tw-border-opacity": "1",
      "backgroundColor": "rgba(var(--ice-warning) / var(--tw-bg-opacity))",
      "borderColor": "rgba(var(--ice-warning) / var(--tw-border-opacity))",
    },
    ".som-checkbox-warning .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
  },
  "utils": {
    ".som-checkbox-circle .wx-checkbox-input": {
      "borderRadius": "9999px",
    },
    ".som-checkbox-lg .wx-checkbox-input": {
      "height": "1.5rem",
      "width": "1.5rem",
    },
    ".som-checkbox-lg .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1.25rem",
      "height": "1.25rem",
      "lineHeight": "1.25rem",
      "width": "1.25rem",
    },
    ".som-checkbox-md .wx-checkbox-input": {
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".som-checkbox-md .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "lineHeight": "1rem",
      "width": "1rem",
    },
    ".som-checkbox-sm .wx-checkbox-input": {
      "height": "1rem",
      "width": "1rem",
    },
    ".som-checkbox-sm .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "0.75rem",
      "height": "0.75rem",
      "lineHeight": ".75rem",
      "width": "0.75rem",
    },
    ".som-checkbox-square .wx-checkbox-input": {
      "borderRadius": "0.125rem",
    },
    ".som-checkbox-xs .wx-checkbox-input": {
      "height": "0.75rem",
      "width": "0.75rem",
    },
    ".som-checkbox-xs .wx-checkbox-input.wx-checkbox-input-checked::before": {
      "fontSize": "0.5rem",
      "height": "0.5rem",
      "lineHeight": "0.5rem",
      "width": "0.5rem",
    },
  },
}
`;

exports[`presets > miniprogramPreset radio css with prefix 1`] = `
{
  "base": {
    ".radio .wx-radio-input": {
      "borderRadius": "9999px",
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".radio .wx-radio-input.wx-radio-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "left": "50%",
      "lineHeight": "1rem",
      "position": "absolute",
      "textAlign": "center",
      "top": "50%",
      "transform": "translate(-50%, -50%) scale(1)",
      "width": "1rem",
    },
  },
  "styled": {
    ".radio-error .wx-radio-input.wx-radio-input-checked": {
      "--tw-bg-opacity": "1 !important",
      "--tw-border-opacity": "1 !important",
      "backgroundColor": "rgba(var(--ice-error) / var(--tw-bg-opacity)) !important",
      "borderColor": "rgba(var(--ice-error) / var(--tw-border-opacity)) !important",
    },
    ".radio-error .wx-radio-input.wx-radio-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".radio-neutral .wx-radio-input.wx-radio-input-checked": {
      "--tw-bg-opacity": "1 !important",
      "--tw-border-opacity": "1 !important",
      "backgroundColor": "rgba(var(--ice-neutral) / var(--tw-bg-opacity)) !important",
      "borderColor": "rgba(var(--ice-neutral) / var(--tw-border-opacity)) !important",
    },
    ".radio-neutral .wx-radio-input.wx-radio-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".radio-primary .wx-radio-input.wx-radio-input-checked": {
      "--tw-bg-opacity": "1 !important",
      "--tw-border-opacity": "1 !important",
      "backgroundColor": "rgba(var(--ice-primary) / var(--tw-bg-opacity)) !important",
      "borderColor": "rgba(var(--ice-primary) / var(--tw-border-opacity)) !important",
    },
    ".radio-primary .wx-radio-input.wx-radio-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".radio-success .wx-radio-input.wx-radio-input-checked": {
      "--tw-bg-opacity": "1 !important",
      "--tw-border-opacity": "1 !important",
      "backgroundColor": "rgba(var(--ice-success) / var(--tw-bg-opacity)) !important",
      "borderColor": "rgba(var(--ice-success) / var(--tw-border-opacity)) !important",
    },
    ".radio-success .wx-radio-input.wx-radio-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
    ".radio-warning .wx-radio-input.wx-radio-input-checked": {
      "--tw-bg-opacity": "1 !important",
      "--tw-border-opacity": "1 !important",
      "backgroundColor": "rgba(var(--ice-warning) / var(--tw-bg-opacity)) !important",
      "borderColor": "rgba(var(--ice-warning) / var(--tw-border-opacity)) !important",
    },
    ".radio-warning .wx-radio-input.wx-radio-input-checked::before": {
      "background": "transparent",
      "color": "#ffffff",
    },
  },
  "utils": {
    ".radio-circle .wx-radio-input": {
      "borderRadius": "9999px",
    },
    ".radio-lg .wx-radio-input": {
      "height": "1.5rem",
      "width": "1.5rem",
    },
    ".radio-lg .wx-radio-input.wx-radio-input-checked::before": {
      "fontSize": "1.25rem",
      "height": "1.25rem",
      "lineHeight": "1.25rem",
      "width": "1.25rem",
    },
    ".radio-md .wx-radio-input": {
      "height": "1.25rem",
      "width": "1.25rem",
    },
    ".radio-md .wx-radio-input.wx-radio-input-checked::before": {
      "fontSize": "1rem",
      "height": "1rem",
      "lineHeight": "1rem",
      "width": "1rem",
    },
    ".radio-sm .wx-radio-input": {
      "height": "1rem",
      "width": "1rem",
    },
    ".radio-sm .wx-radio-input.wx-radio-input-checked::before": {
      "fontSize": "0.75rem",
      "height": "0.75rem",
      "lineHeight": ".75rem",
      "width": "0.75rem",
    },
    ".radio-square .wx-radio-input": {
      "borderRadius": "0.125rem",
    },
    ".radio-xs .wx-radio-input": {
      "height": "0.75rem",
      "width": "0.75rem",
    },
    ".radio-xs .wx-radio-input.wx-radio-input-checked::before": {
      "fontSize": "0.5rem",
      "height": "0.5rem",
      "lineHeight": "0.5rem",
      "width": "0.5rem",
    },
  },
}
`;

exports[`presets > presets merge case 0 1`] = `
{
  "base": {
    "extraColors": {
      "dark": {
        "base-100": "#000000",
        "base-1000": "#f0f0f0",
        "base-1100": "#f5f5f5",
        "base-1200": "#fafafa",
        "base-1300": "#ffffff",
        "base-200": "#141414",
        "base-300": "#1f1f1f",
        "base-400": "#262626",
        "base-500": "#434343",
        "base-600": "#595959",
        "base-700": "#8c8c8c",
        "base-800": "#bfbfbf",
        "base-900": "#d9d9d9",
        "base-content": "#ffffff",
      },
      "light": {
        "base-100": "#ffffff",
        "base-1000": "#262626",
        "base-1100": "#1f1f1f",
        "base-1200": "#141414",
        "base-1300": "#000000",
        "base-200": "#fafafa",
        "base-300": "#f5f5f5",
        "base-400": "#f0f0f0",
        "base-500": "#d9d9d9",
        "base-600": "#bfbfbf",
        "base-700": "#8c8c8c",
        "base-800": "#595959",
        "base-900": "#434343",
        "base-content": "#000000",
      },
    },
    "extraVars": {
      "dark": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
      "light": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
    },
    "themes": {
      "dark": {
        "selector": ".dark",
      },
      "light": {
        "selector": "page",
      },
    },
    "types": {
      "error": {
        "dark": {
          "error": "#d32029",
          "error-active": "#e84749",
          "error-content": "#ffffff",
          "error-hover": "#a61d24",
        },
        "light": {
          "error": "#f5222d",
          "error-active": "#cf1322",
          "error-content": "#ffffff",
          "error-hover": "#ff4d4f",
        },
      },
      "neutral": {
        "dark": {
          "neutral": "#5a5a5a",
          "neutral-active": "#6a6a6a",
          "neutral-content": "#ffffff",
          "neutral-hover": "#494949",
        },
        "light": {
          "neutral": "#666666",
          "neutral-active": "#404040",
          "neutral-content": "#ffffff",
          "neutral-hover": "#737373",
        },
      },
      "primary": {
        "dark": {
          "primary": "#1668dc",
          "primary-active": "#3c89e8",
          "primary-content": "#ffffff",
          "primary-hover": "#1554ad",
        },
        "light": {
          "primary": "#1677ff",
          "primary-active": "#0958d9",
          "primary-content": "#ffffff",
          "primary-hover": "#4096ff",
        },
      },
      "success": {
        "dark": {
          "success": "#49aa19",
          "success-active": "#6abe39",
          "success-content": "#ffffff",
          "success-hover": "#3c8618",
        },
        "light": {
          "success": "#52c41a",
          "success-active": "#389e0d",
          "success-content": "#ffffff",
          "success-hover": "#73d13d",
        },
      },
      "warning": {
        "dark": {
          "warning": "#d89614",
          "warning-active": "#e8b339",
          "warning-content": "#ffffff",
          "warning-hover": "#aa7714",
        },
        "light": {
          "warning": "#faad14",
          "warning-active": "#d48806",
          "warning-content": "#ffffff",
          "warning-hover": "#ffc53d",
        },
      },
    },
  },
  "components": {
    "alert": {
      "schema": [Function],
      "selector": ".alert",
    },
    "avatar": {
      "schema": [Function],
      "selector": ".avatar",
    },
    "badge": {
      "schema": [Function],
      "selector": ".badge",
    },
    "button": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".btn",
    },
    "chat": {
      "schema": [Function],
      "selector": ".chat",
    },
    "checkbox": {
      "prefix": {
        "ignore": [
          ".wx-checkbox",
        ],
      },
      "schema": [Function],
      "selector": ".checkbox",
    },
    "collapse": {
      "schema": [Function],
      "selector": ".collapse",
    },
    "countdown": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".countdown",
      "varPrefix": {
        "ignoreProp": [
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--value",
        ],
      },
    },
    "diff": false,
    "divider": {
      "schema": [Function],
      "selector": ".divider",
    },
    "form": {
      "schema": [Function],
    },
    "indicator": {
      "schema": [Function],
      "selector": ".indicator",
    },
    "input": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".input",
    },
    "join": {
      "schema": [Function],
      "selector": ".join",
    },
    "kbd": {
      "schema": [Function],
      "selector": ".kbd",
    },
    "link": {
      "schema": [Function],
      "selector": ".link",
    },
    "loading": {
      "schema": [Function],
      "selector": ".loading",
    },
    "mask": {
      "schema": [Function],
      "selector": ".mask",
    },
    "progress": {
      "schema": [Function],
      "selector": ".progress",
    },
    "radial-progress": {
      "schema": [Function],
      "selector": ".radial-progress",
      "varPrefix": {
        "ignoreProp": [
          "--size",
          "--thickness",
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--size",
          "--thickness",
          "--value",
        ],
      },
    },
    "radio": {
      "prefix": {
        "ignore": [
          ".wx-radio",
        ],
      },
      "schema": [Function],
      "selector": ".radio",
    },
    "range": {
      "prefix": {
        "ignore": [
          ".wx-slider",
        ],
      },
      "schema": [Function],
      "selector": ".range",
    },
    "select": false,
    "skeleton": {
      "schema": [Function],
      "selector": ".skeleton",
    },
    "stack": {
      "schema": [Function],
      "selector": ".stack",
    },
    "steps": {
      "schema": [Function],
      "selector": ".step",
    },
    "tab": {
      "schema": [Function],
      "selector": ".tab",
    },
    "table": {
      "schema": [Function],
      "selector": ".table",
    },
    "textarea": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".textarea",
    },
    "toast": {
      "schema": [Function],
      "selector": ".toast",
    },
    "toggle": {
      "prefix": {
        "ignore": [
          ".wx-switch",
          ".wx-checkbox",
        ],
      },
      "schema": [Function],
      "selector": ".toggle",
    },
    "tooltip": false,
  },
  "dryRun": false,
  "global": {
    "atMedia": {
      "hover": false,
    },
    "pseudo": {},
    "selector": {
      "root": "page",
      "universal": "view",
    },
  },
  "log": true,
  "mode": "styled",
  "presets": [
    {
      "base": {
        "themes": {
          "dark": {
            "selector": ".dark",
          },
          "light": {
            "selector": "page",
          },
        },
      },
      "components": {
        "button": {
          "extra": [Function],
        },
        "checkbox": {
          "prefix": {
            "ignore": [
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "collapse": {
          "schema": [Function],
        },
        "countdown": {
          "extra": [Function],
        },
        "diff": false,
        "input": {
          "extra": [Function],
        },
        "join": {
          "schema": [Function],
        },
        "radio": {
          "prefix": {
            "ignore": [
              ".wx-radio",
            ],
          },
          "schema": [Function],
        },
        "range": {
          "prefix": {
            "ignore": [
              ".wx-slider",
            ],
          },
          "schema": [Function],
        },
        "select": false,
        "tab": {
          "schema": [Function],
        },
        "table": {
          "schema": [Function],
        },
        "textarea": {
          "extra": [Function],
        },
        "toggle": {
          "prefix": {
            "ignore": [
              ".wx-switch",
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "tooltip": false,
      },
      "global": {
        "atMedia": {
          "hover": false,
        },
        "pseudo": {},
        "selector": {
          "root": "page",
          "universal": "view",
        },
      },
    },
  ],
  "varPrefix": {
    "varPrefix": "--ice-",
  },
}
`;

exports[`presets > presets merge case 1 1`] = `
{
  "base": {
    "extraColors": {
      "dark": {
        "base-100": "#000000",
        "base-1000": "#f0f0f0",
        "base-1100": "#f5f5f5",
        "base-1200": "#fafafa",
        "base-1300": "#ffffff",
        "base-200": "#141414",
        "base-300": "#1f1f1f",
        "base-400": "#262626",
        "base-500": "#434343",
        "base-600": "#595959",
        "base-700": "#8c8c8c",
        "base-800": "#bfbfbf",
        "base-900": "#d9d9d9",
        "base-content": "#ffffff",
      },
      "light": {
        "base-100": "#ffffff",
        "base-1000": "#262626",
        "base-1100": "#1f1f1f",
        "base-1200": "#141414",
        "base-1300": "#000000",
        "base-200": "#fafafa",
        "base-300": "#f5f5f5",
        "base-400": "#f0f0f0",
        "base-500": "#d9d9d9",
        "base-600": "#bfbfbf",
        "base-700": "#8c8c8c",
        "base-800": "#595959",
        "base-900": "#434343",
        "base-content": "#000000",
      },
    },
    "extraVars": {
      "dark": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
      "light": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "skeleton-duration": "1.2s",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
    },
    "themes": {
      "dark": {
        "selector": ".dark",
      },
      "light": {
        "selector": "page",
      },
    },
    "types": {
      "error": {
        "dark": {
          "error": "#d32029",
          "error-active": "#e84749",
          "error-content": "#ffffff",
          "error-hover": "#a61d24",
        },
        "light": {
          "error": "#f5222d",
          "error-active": "#cf1322",
          "error-content": "#ffffff",
          "error-hover": "#ff4d4f",
        },
      },
      "neutral": {
        "dark": {
          "neutral": "#5a5a5a",
          "neutral-active": "#6a6a6a",
          "neutral-content": "#ffffff",
          "neutral-hover": "#494949",
        },
        "light": {
          "neutral": "#666666",
          "neutral-active": "#404040",
          "neutral-content": "#ffffff",
          "neutral-hover": "#737373",
        },
      },
      "primary": {
        "dark": {
          "primary": "#1668dc",
          "primary-active": "#3c89e8",
          "primary-content": "#ffffff",
          "primary-hover": "#1554ad",
        },
        "light": {
          "primary": "#1677ff",
          "primary-active": "#0958d9",
          "primary-content": "#ffffff",
          "primary-hover": "#4096ff",
        },
      },
      "success": {
        "dark": {
          "success": "#49aa19",
          "success-active": "#6abe39",
          "success-content": "#ffffff",
          "success-hover": "#3c8618",
        },
        "light": {
          "success": "#52c41a",
          "success-active": "#389e0d",
          "success-content": "#ffffff",
          "success-hover": "#73d13d",
        },
      },
      "warning": {
        "dark": {
          "warning": "#d89614",
          "warning-active": "#e8b339",
          "warning-content": "#ffffff",
          "warning-hover": "#aa7714",
        },
        "light": {
          "warning": "#faad14",
          "warning-active": "#d48806",
          "warning-content": "#ffffff",
          "warning-hover": "#ffc53d",
        },
      },
    },
  },
  "components": {
    "alert": {
      "schema": [Function],
      "selector": ".alert",
    },
    "avatar": {
      "schema": [Function],
      "selector": ".avatar",
    },
    "badge": {
      "schema": [Function],
      "selector": ".badge",
    },
    "button": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".btn",
    },
    "chat": {
      "schema": [Function],
      "selector": ".chat",
    },
    "checkbox": {
      "prefix": {
        "ignore": [
          ".wx-checkbox",
        ],
        "prefix": "som-",
      },
      "schema": [Function],
      "selector": ".checkbox",
    },
    "collapse": {
      "schema": [Function],
      "selector": ".collapse",
    },
    "countdown": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".countdown",
      "varPrefix": {
        "ignoreProp": [
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--value",
        ],
      },
    },
    "diff": false,
    "divider": {
      "schema": [Function],
      "selector": ".divider",
    },
    "form": {
      "schema": [Function],
    },
    "indicator": {
      "schema": [Function],
      "selector": ".indicator",
    },
    "input": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".input",
    },
    "join": {
      "schema": [Function],
      "selector": ".join",
    },
    "kbd": {
      "schema": [Function],
      "selector": ".kbd",
    },
    "link": {
      "schema": [Function],
      "selector": ".link",
    },
    "loading": {
      "schema": [Function],
      "selector": ".loading",
    },
    "mask": {
      "schema": [Function],
      "selector": ".mask",
    },
    "progress": {
      "schema": [Function],
      "selector": ".progress",
    },
    "radial-progress": {
      "schema": [Function],
      "selector": ".radial-progress",
      "varPrefix": {
        "ignoreProp": [
          "--size",
          "--thickness",
          "--value",
        ],
        "ignoreValueCustomProperty": [
          "--size",
          "--thickness",
          "--value",
        ],
      },
    },
    "radio": {
      "prefix": {
        "ignore": [
          ".wx-radio",
        ],
      },
      "schema": [Function],
      "selector": ".radio",
    },
    "range": {
      "prefix": {
        "ignore": [
          ".wx-slider",
        ],
      },
      "schema": [Function],
      "selector": ".range",
    },
    "select": false,
    "skeleton": {
      "schema": [Function],
      "selector": ".skeleton",
    },
    "stack": {
      "schema": [Function],
      "selector": ".stack",
    },
    "steps": {
      "schema": [Function],
      "selector": ".step",
    },
    "tab": {
      "schema": [Function],
      "selector": ".tab",
    },
    "table": {
      "schema": [Function],
      "selector": ".table",
    },
    "textarea": {
      "extra": [Function],
      "schema": [Function],
      "selector": ".textarea",
    },
    "toast": {
      "schema": [Function],
      "selector": ".toast",
    },
    "toggle": {
      "prefix": {
        "ignore": [
          ".wx-switch",
          ".wx-checkbox",
        ],
      },
      "schema": [Function],
      "selector": ".toggle",
    },
    "tooltip": false,
  },
  "dryRun": false,
  "global": {
    "atMedia": {
      "hover": false,
    },
    "pseudo": {},
    "selector": {
      "root": "page",
      "universal": "view",
    },
  },
  "log": true,
  "mode": "styled",
  "presets": [
    {
      "base": {
        "themes": {
          "dark": {
            "selector": ".dark",
          },
          "light": {
            "selector": "page",
          },
        },
      },
      "components": {
        "button": {
          "extra": [Function],
        },
        "checkbox": {
          "prefix": {
            "ignore": [
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "collapse": {
          "schema": [Function],
        },
        "countdown": {
          "extra": [Function],
        },
        "diff": false,
        "input": {
          "extra": [Function],
        },
        "join": {
          "schema": [Function],
        },
        "radio": {
          "prefix": {
            "ignore": [
              ".wx-radio",
            ],
          },
          "schema": [Function],
        },
        "range": {
          "prefix": {
            "ignore": [
              ".wx-slider",
            ],
          },
          "schema": [Function],
        },
        "select": false,
        "tab": {
          "schema": [Function],
        },
        "table": {
          "schema": [Function],
        },
        "textarea": {
          "extra": [Function],
        },
        "toggle": {
          "prefix": {
            "ignore": [
              ".wx-switch",
              ".wx-checkbox",
            ],
          },
          "schema": [Function],
        },
        "tooltip": false,
      },
      "global": {
        "atMedia": {
          "hover": false,
        },
        "pseudo": {},
        "selector": {
          "root": "page",
          "universal": "view",
        },
      },
    },
  ],
  "varPrefix": {
    "varPrefix": "--ice-",
  },
}
`;
